[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/UI/Main/Windows/SkillTree.png" type="Texture" id=1]
[ext_resource path="res://Resources/UI_Font_22.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/UI/Main/AbilityEssence_Icon.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Main/Learn_Skill_Light.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Main/Learn_Skill_Dark.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Main/Unlock_Skills_Dark.png" type="Texture" id=6]
[ext_resource path="res://Scripts/UI/SkillTreeScreen.gd" type="Script" id=7]
[ext_resource path="res://Sprites/UI/Main/Unlock_Skills_Light.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/Main/Known_Skills_Light.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/Main/Known_Skills_Dark.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.65098, 0, 1 )

[node name="SkillTreeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1366.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnknownSkills" type="ScrollContainer" parent="."]
margin_left = 10.0
margin_top = 114.0
margin_right = 532.0
margin_bottom = 803.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UnknownSkills"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KnownSkillList" type="ScrollContainer" parent="."]
visible = false
margin_left = 10.0
margin_top = 114.0
margin_right = 532.0
margin_bottom = 803.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="KnownSkillList"]

[node name="AbilityEssencePanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 380.0
margin_top = 816.0
margin_right = 532.0
margin_bottom = 846.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="Label" parent="AbilityEssencePanel"]
margin_left = 1.0
margin_top = 2.0
margin_right = 122.0
margin_bottom = 29.0
theme = ExtResource( 2 )
text = "0"
align = 2
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="AbilityEssencePanel"]
margin_left = 127.291
margin_top = 4.73004
margin_right = 148.291
margin_bottom = 25.73
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LearnSkill" type="TextureButton" parent="."]
margin_left = 386.0
margin_top = 68.0
margin_right = 532.0
margin_bottom = 110.0
disabled = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KnownSkills" type="TextureButton" parent="."]
margin_left = 163.0
margin_top = 68.0
margin_right = 309.0
margin_bottom = 110.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnlockSkills" type="TextureButton" parent="."]
margin_left = 10.0
margin_top = 68.0
margin_right = 156.0
margin_bottom = 110.0
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector" type="Panel" parent="."]
visible = false
margin_right = 5.0
margin_bottom = 40.0
rect_min_size = Vector2( 522, 64 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="Panel" parent="."]
visible = false
margin_right = 5.0
margin_bottom = 40.0
rect_min_size = Vector2( 522, 64 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LearnSkill" to="." method="_on_LearnSkill_pressed"]
[connection signal="pressed" from="KnownSkills" to="." method="_on_KnownSkills_pressed"]
[connection signal="pressed" from="UnlockSkills" to="." method="_on_UnlockSkills_pressed"]
